--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "allex_serviceneedservice",
-  "version": "0.1.2",
+  "version": "1.0.0",
   "description": "ServiceNeedService",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@gitlab.hers.rs:allex_services/serviceneed.git"
+    "url": "git@github.com:allex-services/serviceneed.git"
   },
   "keywords": [
     "ecosystem:allex",
@@ -18,4 +18,3 @@
   "author": "HERS Belgrade",
   "license": "ISC"
 }
-
